<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorDarkBackground">
    <TextView
        android:text = "@string/widget_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@style/Caption"/>
    <RadioGroup
        android:layout_gravity="center"
        android:id="@+id/rgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/radioTransparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            style="@style/Caption"
            android:text="@string/transparent">
        </RadioButton>
        <RadioButton
            android:id="@+id/radioDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Caption"
            android:text="@string/dark">
        </RadioButton>
        <RadioButton
            android:id="@+id/radioBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Caption"
            android:text="@string/black">
        </RadioButton>
    </RadioGroup>
    <Space
        android:layout_height="10dp"
        android:layout_width="wrap_content"/>
    <TextView
        android:text = "@string/compass_update_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        style="@style/Caption"/>
    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/Caption"
        android:layout_gravity="center">
        <requestFocus>
        </requestFocus>
    </EditText>
    <Space
        android:layout_height="10dp"
        android:layout_width="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/ok"
        android:layout_gravity="center"
        style="@style/MenuButton">
    </Button>
</LinearLayout>