<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkBackground">
    <TextView
        android:id="@+id/orientationView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orientation"
        style="@style/Caption"/>
    <TextView
        android:id="@+id/angleView"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/angle"
        style="@style/Caption"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/compasView"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/compas_black2"/>
        <ImageView
            android:id="@+id/compasViewBackground"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/compas_black1"/>

    </FrameLayout>


</LinearLayout>